// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`medications reducers creates new entry with given condition id 1`] = `
Object {
  "foo": Object {
    "comments": "",
    "dose": "",
    "drugName": "foo",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers deletes medication entry 1`] = `Object {}`;

exports[`medications reducers updates comments 1`] = `
Object {
  "uuid1": Object {
    "comments": "newComments",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates currently taking 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "NO",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates dose 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "newDose",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates drug name 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "newDrugName",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates end year 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": 2020,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates reason for taking 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "newReasonForTaking",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates schedule 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "newSchedule",
    "sideEffects": Array [],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates side effects 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [
      "newSideEffect",
    ],
    "startYear": -1,
  },
}
`;

exports[`medications reducers updates start year 1`] = `
Object {
  "uuid1": Object {
    "comments": "",
    "dose": "",
    "drugName": "",
    "endYear": -1,
    "isCurrentlyTaking": "",
    "reasonForTaking": "",
    "schedule": "",
    "sideEffects": Array [],
    "startYear": 2019,
  },
}
`;
